# slasher

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
src/: main.rs  unused_private_trait_impls.rs  workspace_unused_trait_impls.rs
tests/: ui.rs
tests/ui/: assoc-const.rs  assoc-const.stderr  basic-unused-impl.rs  basic-unused-impl.stderr  basic-used-impl.rs  trait-object.rs  trait-object.stderr  used-in-inlined.rs
tests/ui/workspace/: basic.rs
tests/ui/workspace/auxiliary/: derives.rs
